// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot 1`] = `
<button
  className="button"
  onClick={[Function]}
/>
`;

exports[`Button should match snapshot when compact 1`] = `
<button
  className="button compact"
  onClick={[Function]}
/>
`;
